# english-park-bot

./: README.md  bot.py  build.sh  config.py  handlers.py  pyproject.toml  render.yaml  requirements.txt  stt.py  tts.py
english-park-bot/: README.md  bot.py  tts.py
