[tool.poetry]
name = "english-park-bot"
version = "0.1.0"
description = "Telegram bot"
authors = ["yourname"]

[tool.poetry.dependencies]
python = "3.11.9"
aiogram = "2.25.2"
openai = "*"
google-cloud-texttospeech = "*"
aiohttp = "3.8.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
